# SentinelAI

./: .env.example  .gitignore  README.md  alembic.ini  main_start.sh  pyproject.toml
Target_Client/: README.md  start.sh
Target_Client/chaos-panel/: Dockerfile  README.md  index.html
Target_Client/k8s/: README.md  chaos-panel.yaml  hpa.yaml  services.yaml
Target_Client/load-generator/: Dockerfile  README.md  load_gen.py
Target_Client/services/: README.md
Target_Client/testing/: README.md  test_layer0.py  test_layer1.py
backend/: README.md  auth.py  crud.py  database.py  models.py  rate_limit.py  rbac.py  schemas.py  seed.py  seed_history.py
backend/alembic/: README.md  env.py
backend/alembic/versions/: README.md  (+6 more)
backend/routers/: auth.py
benchmarks/: bench_mttr.py
dashboard/: README.md  middleware.ts  next.config.ts  package-lock.json  package.json
dashboard/app/: README.md  globals.css  layout.tsx
dashboard/components/: README.md
docs/: session-nvidia-nim-benchmark.md
docs/architecture/: README.md  agent-runtime-flow.mmd  api-routes.mmd  auth-flow.mmd  backend-data-model.mmd  dashboard-login-sequence.mmd  dashboard-routing.mmd  incident-followup-sequence.mmd  incident-investigation-loop.mmd  job-lifecycle-sequence.mmd  job-queue-system.mmd  mcp-evidence-sequence.mmd  mcp-integration.mmd  platform-bootstrap-sequence.mmd  platform-bootstrap.mmd  system-topology.mmd  target-client-architecture.mmd
edge_mcp_servers/: .env.example  README.md  docker-compose.yaml  start.sh  stop.sh
edge_mcp_servers/mcp_servers/: README.md
edge_mcp_servers/testing/: output_layer2.txt  test_layer2.py
platform/: Dockerfile  Dockerfile.dashboard  README.md  docker-compose.yaml  start.sh  stop.sh
sre_agent/: README.md  agent_nodes.py  agent_runtime.py  agent_runtime_tasks.py  agent_state.py  audit_context.py  callbacks.py  constants.py  context_builder.py  graph_builder.py  incident_timeline.py  llm_utils.py  logging_config.py  mcp_tool_wrapper.py  memory_store.py  models.py  multi_agent_langgraph.py  output_formatter.py  policy_engine.py  redis_state_store.py  supervisor.py
sre_agent/api/: README.md
sre_agent/config/: README.md  agent_config.yaml
tests/: README.md  test_mission_control_follow_up.py  test_supervisor_follow_up.py  test_timeline_crud.py
(+80 files in other folders)
